Make code more modern anf fix typos